--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "assets/js/bootstrap.bundle.min.js",
+              "assets/js/popper.min.js",
+              "assets/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
